Modified the app for NewsApp stage2

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,46 +18,49 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/sourceName"
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/five_dp"
+                android:hint="@string/date_hint"
+                android:padding="@dimen/five_dp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/thirteen_sp"
+                tools:ignore="RtlHardcoded" />
+
+            <TextView
+                android:id="@+id/headLine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/ten_dp"
                 android:gravity="center"
-                android:hint="@string/title_hint"
-                android:paddingStart="@dimen/sixteen_dp"
-                android:paddingEnd="@dimen/sixteen_dp"
-                android:textColor="@color/navy_blue"
-                android:textSize="@dimen/twenty_sp"
-                tools:capitalize="sentences" />
+                android:hint="@string/app_name"
+                android:padding="@dimen/five_dp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/twenty_six_sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/headLine"
+                    android:id="@+id/author"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/ten_dp"
-                    android:gravity="center"
-                    android:hint="@string/app_name"
-                    android:padding="@dimen/five_dp"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/twenty_six_sp" />
-
-                <TextView
-                    android:id="@+id/date"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="@dimen/five_dp"
-                    android:hint="@string/date_hint"
-                    android:textAlignment="viewEnd"
-                    android:textSize="@dimen/thirteen_sp"
-                    tools:ignore="RtlHardcoded" />
+                    android:gravity="end"
+                    android:hint="@string/author_hint"
+                    android:paddingStart="@dimen/ten_dp"
+                    android:paddingEnd="@dimen/ten_dp"
+                    android:paddingBottom="@dimen/ten_dp"
+                    android:textAllCaps="true"
+                    android:textSize="@dimen/fifteen_sp"
+                    android:textStyle="bold|italic" />
 
             </LinearLayout>
+
         </LinearLayout>
+
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
