--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,24 @@
     android:background="@color/navy_blue"
     tools:context=".MainActivity">
 
-    <ListView xmlns:tools="http://schemas.android.com/tools"
+    <TextView
+        android:id="@+id/heading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/eight_dp"
+        android:background="@color/white"
+        android:gravity="center"
+        android:hint="@string/heading_hint"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:textSize="@dimen/twenty_six_sp"
+        android:textStyle="bold" />
+
+    <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/heading"
         tools:context=".MainActivity"></ListView>
 
     <TextView
