--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="ten_dp">10dp</dimen>
     <dimen name="five_dp">5dp</dimen>
     <dimen name="one_fifty_dp">150dp</dimen>
+    <dimen name="fifteen_sp">15sp</dimen>
 </resources>
